--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.0",
     "ag-grid-angular": "^31.1.1",
+    "ag-grid-community": "^31.1.1",
+    "ag-grid-enterprise": "^31.1.1",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
